# wahgex

./: .gitignore  Cargo.toml  Justfile
.github/workflows/: ci.yml  deploy-pages.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/benches/: compile.rs  wasmi.rs
core/src/: compile.rs  engines.rs  error.rs  input.rs  lib.rs  runtime.rs
core/src/compile/: context.rs  epsilon_closure.rs  input.rs  instructions.rs  lookaround.rs  matching.rs  pattern.rs  sparse_set.rs  state.rs  transition.rs  util.rs
core/src/compile/lookaround/: byte_word.rs  perl_word.rs  perl_word_optimized.rs
core/src/engines/: wasmi.rs
core/src/snapshots/: wahgex__compile__tests__empty_pattern_list.snap  wahgex__compile__tests__empty_regex.snap  wahgex__compile__tests__lookaround_crlf.snap  wahgex__compile__tests__lookaround_is_ascii_half_start_end.snap  wahgex__compile__tests__lookaround_is_ascii_start_end.snap  wahgex__compile__tests__lookaround_is_unicode_half_start_end.snap  wahgex__compile__tests__lookaround_is_unicode_start_end.snap  wahgex__compile__tests__lookaround_is_word_ascii.snap  wahgex__compile__tests__lookaround_is_word_ascii_negate.snap  wahgex__compile__tests__lookaround_is_word_unicode.snap  wahgex__compile__tests__lookaround_is_word_unicode_negate.snap  wahgex__compile__tests__lookaround_lf.snap  wahgex__compile__tests__multiple_transition_tables_with_compact_data_segments.snap  wahgex__compile__tests__multiple_transition_tables_without_compact_data_segments.snap  wahgex__compile__tests__repeated_lookaround.snap  wahgex__compile__tests__simple_lookaround.snap  wahgex__compile__tests__simple_repetition.snap  wahgex__compile__tests__sparse_transitions.snap  wahgex_core__compile__tests__empty_regex.snap  wahgex_core__compile__tests__lookaround_crlf.snap  wahgex_core__compile__tests__lookaround_is_ascii_half_start_end.snap  wahgex_core__compile__tests__lookaround_is_ascii_start_end.snap  wahgex_core__compile__tests__lookaround_is_ascii_word.snap  wahgex_core__compile__tests__lookaround_lf.snap  wahgex_core__compile__tests__repeated_lookaround.snap  wahgex_core__compile__tests__simple_lookaround.snap  wahgex_core__compile__tests__simple_repetition.snap  wahgex_core__compile__tests__sparse_transitions.snap
core/tests/: common.rs  integration.rs  wasm_module_size.rs
core/tests/snapshots/: wasm_module_size__wasm_module_size_of.snap
scripts/: bench-against.sh  build-web.sh  ci.sh  install-test-deps.sh
src/: error.rs
src/compile/: epsilon_closure.rs  input.rs  matching.rs  pattern.rs  sparse_set.rs  transition.rs
src/snapshots/: wahgex__compile__tests__empty_regex.snap  wahgex__compile__tests__simple_repetition.snap  wahgex__compile__tests__sparse_transitions.snap
tests/: integration.rs  wasm_module_size.rs
tests/snapshots/: wasm_module_size__wasm_module_size_of.snap
web/: Cargo.toml  build.sh  docs.html  index.html  main.mjs  playground.html  style.css
web/playground/: Cargo.toml
web/playground/src/: lib.rs
web/src/: lib.rs
web/static/: about.html  docs.html  index.html  main.mjs  playground.html  style.css
