[workspace]
members = ["core", "cli", "web/playground"]
resolver = "3"

[workspace.dependencies]
regex-test = "0.1.1"
wasmi = "0.44.0"
wasmparser = { version = "0.228.0", default-features = false, features = [
    "validate",
] }
wasmprinter = { version = "0.228.0", default-features = false }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
