[package]
name = "wahgex-core"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/declanvk/wahgex"
readme = "README.md"
keywords = []
categories = []
edition = "2021"
rust-version = "1.76"

[dependencies]
regex-automata = "0.4.9"
wasm-encoder = { version = "0.228.0", default-features = false, features = [
    "std",
] }
zerocopy = { version = "0.8.24", features = ["derive", "std"] }

[dev-dependencies]
insta = "1.42.2"
regex-test = { workspace = true }
wasmi = { workspace = true }
wasmparser = { workspace = true }
wasmprinter = { workspace = true }

[[test]]
path = "tests/integration.rs"
name = "integration"
