[package]
name = "wahgex"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/declanvk/wahgex"
readme = "README.md"
keywords = []
categories = []
edition = "2024"
rust-version = "1.87"

[dependencies]
regex-automata = { version = "0.4.9" }
wasm-encoder = { version = "0.228.0", default-features = false, features = [
    "std",
], optional = true }
wasmi = { workspace = true, optional = true }
wasmparser = { workspace = true }

[dev-dependencies]
gungraun = "0.17.0"
insta = "1.42.2"
rayon = "1.10.0"
regex-test = { workspace = true }
wahgex = { path = ".", features = [
    "wasmi",
    "compile",
], default-features = false }
wasmprinter = { workspace = true }

[features]
default = ["compile"]
compile = ["dep:wasm-encoder"]
wasmi = ["dep:wasmi"]

[[test]]
path = "tests/integration.rs"
name = "integration"
required-features = ["wasmi", "compile"]

[[test]]
path = "tests/wasm_module_size.rs"
name = "wasm_module_size"
required-features = ["compile"]

[[bench]]
name = "compile"
harness = false
required-features = ["compile"]

[[bench]]
name = "wasmi"
harness = false
required-features = ["wasmi", "compile"]
