[package]
name = "wahgex-web-playground"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wahgex-core = { version = "0.1.0", path = "../../core" }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
] }
